Add C盘清理专家 to navigation, main content and footer

--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@
                     <li><a href="#contact">联系我们</a></li>
                     <li><a href="https://lugui906.github.io/chin/">Chindows</a></li>
                     <li><a href="https://lugui906.github.io/fly/">飞行游戏</a></li>
+                    <li><a href="https://lugui906.github.io/lugui0962/">C盘清理专家</a></li>
                 </ul>
             </div>
         </nav>
@@ -466,6 +467,12 @@
                 <h2>2. 模拟飞行游戏</h2>
                 <p>沉浸式飞行体验，让您感受天空的自由与挑战。我们的模拟飞行游戏采用先进的物理引擎，为您带来逼真的飞行感受和丰富的游戏内容。</p>
                 <a href="https://lugui906.github.io/fly/" class="btn">开始飞行</a>
+            </div>
+            
+            <div class="section">
+                <h2>3. C盘清理专家</h2>
+                <p>高效的系统清理工具，帮助您释放磁盘空间，提升系统性能。C盘清理专家能够智能识别并清理无用文件，让您的电脑运行更加流畅。</p>
+                <a href="https://lugui906.github.io/lugui0962/" class="btn">立即清理</a>
             </div>
         </div>
         
@@ -533,6 +540,7 @@
                     <ul>
                         <li><a href="https://lugui906.github.io/chin/">Chindows操作系统</a></li>
                         <li><a href="https://lugui906.github.io/fly/">模拟飞行游戏</a></li>
+                        <li><a href="https://lugui906.github.io/lugui0962/">C盘清理专家</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
