--- a/index.html
+++ b/index.html
@@ -551,6 +551,12 @@
                         <li><a href="#contact">联系我们</a></li>
                     </ul>
                 </div>
+                <div class="footer-column">
+                    <h3>合作伙伴</h3>
+                    <ul>
+                        <li><a href="#">PAXEL</a></li>
+                    </ul>
+                </div>
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2026 TurtleSoft. 保留所有权利。</p>
